--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "cSpell.words": [
-        "RANS"
+        "Boussinesq",
+        "NOAA’s",
+        "RANS",
+        "Smagorinsky",
+        "subgrid"
     ]
 }
